modified api.yaml, added thresholds api
